--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,10 @@
+
+
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
+
 .main-container{
     display: flex;
     justify-content: center;
@@ -23,3 +30,4 @@
     justify-content: center;
     overflow: hidden;
 }
+
