--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 .leaflet-container {
   width: 100%;
@@ -11,23 +11,78 @@
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    
+    font-family: 'Montserrat', sans-serif;
 }
-.main-container > div:nth-child(1) {
-    flex: 3;
+.search-container{
+    flex: 4;
     width: 100vw;
     background: url('../assets/images/pattern-bg-desktop.png') center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
-.main-container > div:nth-child(2) {
-    flex: 8;
+.search-input-box{
+    height: 42px;
+    padding: 15px;
+    border-radius: 8px 0px 0px 8px;
+    border: none;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1{
+    color: white;
+    margin-top: -50px;
+}
+
+button{
+    height: 42px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0px 8px 8px 0px;
+    outline: none;
+    text-decoration: none;
+    border: none;
+    background: #3F3F3F;
+    color: white;
+    cursor: pointer;
+}
+
+.result-container{
+    height: 100px;
+    background: #FFFFFF;
+    z-index: 1;
+    margin-top: -50px;
+    margin-bottom: -50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 40px;
+}
+.result-container h1{
+    color: black;
+}
+
+.result-container-child{
+    display: flex;
+    flex-direction: column;
+}
+
+.map-container{
+    flex: 6;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    z-index: 0;
 }
 
