--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -14,8 +14,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 .search-container{
-    flex: 4;
     width: 100vw;
+    height: 100vh;
     background: url('../assets/images/pattern-bg-desktop.png') center/cover;
     display: flex;
     align-items: center;
@@ -95,8 +95,8 @@ button{
     font-weight: 700;
 }
 .map-container{
-    flex: 6;
     width: 100vw;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -104,3 +104,139 @@ button{
     z-index: 0;
 }
 
+@media (max-width: 1115px) {
+    .result-container{
+        column-gap: 50px;
+    }
+}    
+
+@media (max-width: 1030px) {
+    .result-container{
+        column-gap: 30px;
+    }
+    .result-container-child{
+        max-width: 200px;
+    }
+}    
+
+@media (max-width: 855px) {
+    .result-container-child{
+        max-width: 150px;
+    }  
+    .result-container{
+        margin-top: -95px;
+        margin-bottom: -79px !important;
+    } 
+}    
+
+@media (max-width: 750px) {
+    h1{
+        margin-top: -80px;
+    }
+    .title-span{
+        font-size: 12px;
+    }
+    .info-span{
+        font-size: 18px;
+    }
+    .result-container{
+        padding-left: 30px;
+        padding-right: 5px;
+        column-gap: 20px;
+        margin-bottom: -72px !important
+    } 
+}   
+
+@media (max-width: 650px) {
+    h1{
+        margin-top: -190px;
+        font-size: 1.8rem;
+    }
+    .result-container{
+        flex-direction:column;
+        width: 400px !important;
+        row-gap: 15px;
+        margin-top: -190px;
+        margin-bottom: -113px !important;
+    }
+    .result-container-child{
+        max-width: 400px !important;
+        align-items: center;
+    }
+    .search-container{
+        height: 150vh;
+    }
+    .map-container{
+        height: 80vh;
+    }
+}  
+
+@media (max-width: 470px) {
+
+
+    .search-container{
+        height: 100vh;
+    }
+
+    .search-input-box{
+
+        width: 300px;
+
+    }
+}  
+
+@media (max-width: 410px) {
+
+    h1{
+        margin-top: -170px;
+        font-size: 25px;
+    }
+    .search-container{
+        height: 100vh;
+    }
+    .result-container{
+        margin-top: -170px;
+        width: 350px !important;
+        margin-bottom: -128px !important;
+    }
+
+    .search-input-box{
+        border-radius: 12px 0px 0px 12px;
+        width: 280px;
+
+    }
+    button{
+        border-radius: 0px 12px 12px 0px;
+    }
+}  
+
+@media (max-width: 365px) {
+
+    h1{
+        font-size: 22px;
+    }
+    .search-container{
+        height: 100vh;
+    }
+    .result-container{
+        margin-top: -190px;
+        width: 300px !important;
+        margin-bottom: -128px !important;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .search-input-box{
+        width: 220px;
+
+    }
+    .title-span{
+        font-weight: 500;
+        font-size: 12px;
+    }
+    .info-span{
+        font-size: 17px;
+        font-weight: 600;
+        text-align: center;
+    }
+} 
